[package]
name = "lapce"
version = "0.2.5"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]
edition = "2021"
rust-version = "1.64"
default-run = "lapce"

[dependencies]
lapce-ui = { path = "./lapce-ui" }
lapce-proxy = { path = "./lapce-proxy" }

[[bin]]
name = "lapce"
path = "lapce-ui/src/bin/lapce.rs"

[[bin]]
name = "lapce-proxy"
path = "lapce-proxy/src/bin/lapce-proxy.rs"

[workspace]
members = ["lapce-ui", "lapce-proxy", "lapce-rpc", "lapce-data", "lapce-core"]

[workspace.package]
version = "0.2.5"
edition = "2021"
rust-version = "1.64"
homepage = "https://lapce.dev"
authors = ["Dongdong Zhou <dzhou121@gmail.com>"]

[workspace.dependencies]
alacritty_terminal = "0.17"
anyhow = "1.0"
base64 = "0.13.1" # anything >0.13 breaks API
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
crossbeam-channel = "0.5"
directories = "4.0"
flate2 = "1.0"
hashbrown = { version = "0.13", features = ["serde"] }
im = { version = "15.1.0", features = ["serde"] }
include_dir = "0.7"
indexmap = "1.9"
interprocess = "1.2"
itertools = "0.10"
log = "0.4"
notify = { version = "5.0.0", features = ["serde"] }
once_cell = "1.17"
parking_lot = { version = "0.12", features = ["deadlock_detection"] }
rayon = "1.6.1"
regex = "1.7.0"
reqwest = { version = "0.11", features = ["blocking", "json", "socks"] }
serde = "1.0"
serde_json = "1.0"
smallvec = "1.10.0"
strum = "0.24"
strum_macros = "0.24"
tar = "0.4"
thiserror = "1.0"
toml_edit = { version = "0.17", features = ["easy"] }

lsp-types = { version = "0.93", features = ["proposed"] }
psp-types = { git = "https://github.com/lapce/psp-types" }


lapce-xi-rope = { version = "0.3.1", features = ["serde"] }

lapce-core = { path = "./lapce-core" }
lapce-rpc = { path = "./lapce-rpc" }
lapce-data = { path = "./lapce-data" }
lapce-proxy = { path = "./lapce-proxy" }

[workspace.dependencies.druid]
# path = "../../druid/druid"
git = "https://github.com/lapce/druid"
branch = "shell_opengl"
features = ["svg", "im", "serde"]


[profile.release-lto]
inherits = "release"
lto = true
codegen-units = 1

# A profile which compiles all (non-workspace) dependencies in release mode
# but Lapce code in dev mode. This gives a good debugging experience for your
# code and fast performance of other people's code. After the initial
# build subsequent ones are as fast as dev mode builds.
# See https://doc.rust-lang.org/cargo/reference/profiles.html
# To use this profile:
#   cargo build --profile fastdev
#   cargo run --profile fastdev --bin lapce
[profile.fastdev.package."*"]
opt-level = 3

[profile.fastdev]
inherits = "dev"
