[package]
name = "lapce-proxy"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
alacritty_terminal.workspace = true
anyhow.workspace = true
base64.workspace = true
clap.workspace = true
crossbeam-channel.workspace = true
directories.workspace = true
flate2.workspace = true
indexmap.workspace = true
interprocess.workspace = true
log.workspace = true
notify.workspace = true
once_cell.workspace = true
parking_lot.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
strum_macros.workspace = true
tar.workspace = true
toml_edit.workspace = true

lsp-types.workspace = true
psp-types.workspace = true

lapce-xi-rope.workspace = true

lapce-core.workspace = true
lapce-rpc.workspace = true

# proxy specific dependencies

zstd = "0.11"
url = "2.2.2"
dyn-clone = "1.0.8"
which = "4.2.5"
grep-searcher = "0.1.8"
grep-matcher = "0.1.5"
grep-regex = "0.1.9"
walkdir = "2.3.2"
ignore = "0.4.18"
globset = "0.4.9"
wasmtime = "1.0.0"
wasmtime-wasi = "1.0.0"
wasi-common = "1.0.0"
wasi-experimental-http-wasmtime = { git = "https://github.com/lapce/wasi-experimental-http" }
locale_config = "0.3.0"
mio = "0.6.20"
jsonrpc-lite = "0.6.0"
git2 = { version = "0.14.4", features = ["vendored-openssl"] }
trash = "3.0"
